--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ x-rpmbuild:
         geos_min_version: *geos_min_version
         proj_min_version: *proj_min_version
     geos:
-      image: rpmbuild-geos
+      image: rpmbuild-generic
       version: &geos_version 3.10.2-1
     gpsbabel:
       image: rpmbuild-gpsbabel
@@ -73,6 +73,9 @@ x-rpmbuild:
       version: &libgeotiff_version 1.7.1-1
       defines:
         proj_min_version: *proj_min_version
+    libgta:
+      image: rpmbuild-generic
+      version: &libgta_version 1.2.1-1
     journald-cloudwatch-logs:
       image: rpmbuild-journald-cloudwatch-logs
       version: &journald-cloudwatch-logs_version '0.2.0-1'
@@ -253,15 +256,6 @@ services:
         rpmbuild_channel: *rpmbuild_channel
         sfcgal_version: *SFCGAL_version
       dockerfile: docker/Dockerfile.rpmbuild-gdal
-  rpmbuild-geos:
-    <<: *service_defaults
-    depends_on:
-      - rpmbuild-generic
-    build:
-      <<: *build_defaults
-      args:
-        packages: "${RPMBUILD_GEOS_PACKAGES}"
-        rpmbuild_channel: *rpmbuild_channel
   rpmbuild-gpsbabel:
     <<: *service_defaults
     depends_on:
