--- a/docker/Dockerfile.rpmbuild
+++ b/docker/Dockerfile.rpmbuild
@@ -34,7 +34,9 @@ RUN --mount=type=cache,target=/var/cache/dnf \
     dnf config-manager --save \
         --setopt=keepcache=1 \
         --setopt=baseos.repo_gpgcheck=1 \
-        --setopt=appstream.repo_gpgcheck=1 && \
+        --setopt=appstream.repo_gpgcheck=1 \
+        --setopt=crb.enabled=1 \
+        --setopt=crb.repo_gpgcheck=1 && \
     dnf -q -y update && \
     dnf -q -y install \
       autoconf \
@@ -43,6 +45,7 @@ RUN --mount=type=cache,target=/var/cache/dnf \
       cmake \
       createrepo \
       doxygen \
+      epel-release \
       gcc \
       gcc-c++ \
       gdb \
