--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,10 @@ x-rpmbuild:
   # and runtime requirements.
   minimum_versions:
     geos: &geos_min_version 3.10.0
-    gdal: &gdal_min_version 3.4.0
+    gdal: &gdal_min_version 3.5.0
     libosmium: &libosmium_min_version 2.18.0
     postgis_min_version: &postgis_min_version 3.2.0
-    proj: &proj_min_version 7.2.0
+    proj: &proj_min_version 9.0.0
     protobuf: &protobuf_min_version 3.0.0
     protobuf-c: &protobuf_c_min_version 1.3.0
     protozero: &protozero_min_version 1.7.0
@@ -127,7 +127,7 @@ x-rpmbuild:
         libosmium_min_version: *libosmium_min_version
     osmosis:
       image: rpmbuild-generic
-      version: &osmosis_version '0.48.3-1'
+      version: &osmosis_version 0.48.3-1
       arch: noarch
     osmium-tool:
       image: rpmbuild-osmium-tool
@@ -148,7 +148,7 @@ x-rpmbuild:
       version: &passenger_version '6.0.13-1'
     postgis:
       image: rpmbuild-postgis
-      version: &postgis_version '3.2.1-1'
+      version: &postgis_version 3.2.1-1
       defines:
         gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
@@ -485,22 +485,13 @@ services:
   rpmbuild-postgis:
     <<: *service_defaults
     depends_on:
-      - rpmbuild-gdal
+      - rpmbuild-pgdg
     build:
       <<: *build_defaults
       args:
-        cgal_version: *CGAL_version
-        filegdbapi_version: *FileGDBAPI_version
-        gdal_version: *gdal_version
-        geos_version: *geos_version
-        gpsbabel_version: *gpsbabel_version
-        libgeotiff_version: *libgeotiff_version
-        libkml_version: *libkml_version
         packages: "${RPMBUILD_POSTGIS_PACKAGES}"
-        proj_version: *proj_version
         rpmbuild_channel: *rpmbuild_channel
-        sfcgal_version: *SFCGAL_version
-      dockerfile: docker/Dockerfile.rpmbuild-postgis
+      dockerfile: docker/Dockerfile.rpmbuild-geoint-pgdg
   rpmbuild-protozero:
     <<: *service_defaults
     depends_on:
