--- a/docker/Dockerfile.rpmbuild-geoint-deps
+++ b/docker/Dockerfile.rpmbuild-geoint-deps
@@ -2,15 +2,17 @@ ARG rpmbuild_channel
 ARG rpmbuild_image=rpmbuild
 FROM deps-${rpmbuild_channel}_${rpmbuild_image}:latest
 
-ARG gem_packages=""
-ARG packages=""
+ARG gem_packages
+ARG packages
+ARG python_packages
 
 # If any package dependencies are needed, install them.
 SHELL ["/bin/bash", "-euo", "pipefail", "-c"]
-RUN --mount=type=cache,target=/var/cache/yum \
+RUN --mount=type=cache,target=/var/cache/dnf \
     /usr/local/bin/geoint-deps-repo.sh && \
-    if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
-    if [ -n "${gem_packages}" ] ; then gem install ${gem_packages}; fi && \
+    if [ -n "${packages:-}" ] ; then dnf -q -y install ${packages}; fi && \
+    if [ -n "${gem_packages:-}" ] ; then gem install ${gem_packages}; fi && \
+    if [ -n "${python3_packages:-}" ] ; then pip3 install --disable-pip-version-check ${python3_packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
     rm -f /usr/local/bin/rpmbuild-user.sh
 
