--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,9 @@ x-rpmbuild:
     libgta:
       image: rpmbuild-generic
       version: &libgta_version 1.2.1-1
+    libpqxx:
+      image: rpmbuild-libpqxx
+      version: &libpqxx_version 6.4.8-1
     journald-cloudwatch-logs:
       image: rpmbuild-journald-cloudwatch-logs
       version: &journald-cloudwatch-logs_version '0.2.0-1'
@@ -121,9 +124,9 @@ x-rpmbuild:
       version: &osmctools_version '0.9-1'
     osmdbt:
       image: rpmbuild-osmdbt
-      version: &osmdbt_version '0.3-1'
+      version: &osmdbt_version 0.6-1
       defines:
-        commit: 'e0158c0751207b0e77ab67e40a837016759e203d'
+        commit: c03a67558b80ae00cbd881b0b4b2a458bc3540d1
         libosmium_min_version: *libosmium_min_version
     osmosis:
       image: rpmbuild-generic
@@ -333,6 +336,16 @@ services:
         rpmbuild_channel: *rpmbuild_channel
         proj_version: *proj_version
       dockerfile: docker/Dockerfile.rpmbuild-libgeotiff
+  rpmbuild-libpqxx:
+    <<: *service_defaults
+    depends_on:
+      - rpmbuild-pgdg
+    build:
+      <<: *build_defaults
+      args:
+        packages: "${RPMBUILD_LIBPQXX_PACKAGES}"
+        rpmbuild_channel: *rpmbuild_channel
+      dockerfile: docker/Dockerfile.rpmbuild-geoint-pgdg
   rpmbuild-libkml:
     <<: *service_defaults
     depends_on:
@@ -488,12 +501,10 @@ services:
     build:
       <<: *build_defaults
       args:
-        libosmium_version: *libosmium_version
-        protozero_version: *protozero_version
         packages: "${RPMBUILD_PYOSMIUM_PACKAGES}"
         python3_packages: pytest==7.0.1
         rpmbuild_channel: *rpmbuild_channel
-      dockerfile: docker/Dockerfile.rpmbuild-libosmium-generic
+      dockerfile: docker/Dockerfile.rpmbuild-geoint-deps
   rpmbuild-python-mapnik:
     <<: *service_defaults
     depends_on:
